@@ -152,14 +152,14 @@ sub Login {
 
     use MIME::Base64;
     use Net::SSLeay qw(get_https make_headers);
-#    my ($page, $result, %headers)
-    my (undef, $result)
-         = get_https('pause.perl.org', 443, '/pause/authenquery',
-              make_headers(Authorization =>
-                           'Basic ' . MIME::Base64::encode("$cgiparams{pause}:$cgiparams{eject}",''))
-              );
 
-    if($result =~ /200 OK/) {
+    use LWP::UserAgent;
+    my $result = LWP::UserAgent->new->get("https://pause.perl.org/pause/authenquery",
+            Authorization =>
+                'Basic ' . MIME::Base64::encode("$cgiparams{pause}:$cgiparams{eject}",'')
+    );
+
+    if($result->code == 200) {
         my @rows = $dbi->GetQuery('hash','CheckUser','PAUSE','PAUSE');
 
         # add entry to session table
